updated order page

--- a/order_management/static/order_management/style.css
+++ b/order_management/static/order_management/style.css
@@ -157,6 +157,16 @@ a:link, a:visited {
 	background: #fff;
 	font-size: 13px;
 }
+
+.block-item-input small{
+	margin: 4px 0 4px;
+	padding: 0;
+	color: #ba2121;
+	background: #fff;
+	font-size: 13px;
+}
+
+
 .d-flex-block{
 		display: flex;
 		width: 100%;
@@ -274,14 +284,11 @@ a:link, a:visited {
 	flex-direction: column;
 }
 .error-message{
-	font-size: 14px;
 	font-weight: 700;
 	display: block;
 	padding: 10px 12px;
 	margin: 0px 40px 10px 40px;
 	color: #ba2121;
-	border: 1px solid #ba2121;
-	border-radius: 4px;
 	background-color: #fff;
 	background-position: 5px 12px;
 }
