--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -41,6 +41,9 @@
   </head>
   <body>
     <div style=" padding-left: 5px;padding-right: 5px; padding-bottom: 20px;">
+         <h4 style="margin: 0; margin-top: 5px; text-align: center; font-size: 18px">
+                Super Shop Management System
+                </h4>
         <table style="width: 100%; margin-top: 5px; padding-left: 30px;padding-right: 30px;">
             <tbody>
                 <tr>
